--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
     "orgchart": "^2.1.2",
+    "rc-pagination": "^1.20.7",
+    "rc-select": "^9.x",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^10.1.1",
     "react-color": "^2.17.3",
