--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.11-beta1",
+  "version": "0.2.12",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "orgchart": "^2.1.2",
     "rc-pagination": "^1.20.7",
     "rc-select": "^9.x",
+    "rc-tabs": "^9.6.7",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^10.1.1",
     "react-color": "^2.17.3",
