--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.14-beta2",
+  "version": "0.2.15",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -29,13 +29,13 @@
     "orgchart": "^2.1.2",
     "rc-pagination": "^1.20.7",
     "rc-select": "^9.x",
-    "react": "^16.8.6",
+    "react": "^16.10.2",
     "react-beautiful-dnd": "^10.1.1",
     "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.10.2",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "react-rnd": "^10.0.0",
