--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-datepicker": "^2.8.1",
     "@types/shortid": "^0.0.29",
+    "@typescript-eslint/parser": "^2.3.3",
     "classnames": "latest",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
@@ -69,7 +70,7 @@
     "@types/node": "12.0.0",
     "@types/react": "16.8.17",
     "@types/react-beautiful-dnd": "^10.1.2",
-    "@types/react-color": "^2.17.0",
+    "@types/react-color": "^3.0.1",
     "@types/react-dom": "16.8.4",
     "@types/react-resize-detector": "^3.1.1",
     "@types/react-test-renderer": "^16.8.1",
