--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.24-beta2",
+  "version": "0.2.24-beta3",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -15,11 +15,13 @@
     "@blueprintjs/datetime": "^3.12.0",
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
+    "@types/color": "^3.0.0",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-datepicker": "^2.8.1",
     "@types/shortid": "^0.0.29",
     "@typescript-eslint/parser": "^2.3.3",
     "classnames": "latest",
+    "color": "^3.1.2",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
