--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@blueprintjs/datetime": "^3.12.0",
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
+    "@types/react-outside-click-handler": "^1.2.0",
     "@typescript-eslint/parser": "^2.3.3",
     "classnames": "latest",
     "formstate": "^1.3.0",
@@ -34,6 +35,7 @@
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.10.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "react-rnd": "^10.0.0",
