--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@blueprintjs/datetime": "^3.12.0",
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
-    "@types/react-outside-click-handler": "^1.2.0",
     "@typescript-eslint/parser": "^2.3.3",
     "classnames": "latest",
     "formstate": "^1.3.0",
@@ -35,7 +34,6 @@
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.10.2",
-    "react-outside-click-handler": "^1.3.0",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "react-rnd": "^10.0.0",
@@ -74,8 +72,10 @@
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-datepicker": "^2.8.1",
     "@types/react-dom": "16.8.4",
+    "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-resize-detector": "^3.1.1",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/react-text-mask": "^5.4.6",
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^4.1.14",
     "@types/validator": "^10.11.0",
@@ -128,10 +128,13 @@
     "pretty-quick": "^1.10.0",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-test-renderer": "^16.8.6",
+    "react-text-mask": "^5.4.3",
     "resolve": "1.10.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
+    "text-mask-addons": "^3.8.0",
     "ts-pnp": "1.1.2",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
