--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.25",
+  "version": "0.2.25-beta1",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -15,6 +15,7 @@
     "@blueprintjs/datetime": "^3.12.0",
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
+    "@types/react-text-mask": "^5.4.6",
     "@typescript-eslint/parser": "^2.3.3",
     "classnames": "latest",
     "formstate": "^1.3.0",
@@ -38,6 +39,7 @@
     "react-resize-detector": "^4.1.3",
     "react-rnd": "^10.0.0",
     "react-scrollbars-custom": "^4.0.20",
+    "react-text-mask": "^5.4.3",
     "shortid": "^2.2.15",
     "styled-components": "^4.2.0",
     "validator": "^10.11.0"
@@ -75,7 +77,6 @@
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-resize-detector": "^3.1.1",
     "@types/react-test-renderer": "^16.8.1",
-    "@types/react-text-mask": "^5.4.6",
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^4.1.14",
     "@types/validator": "^10.11.0",
@@ -130,7 +131,6 @@
     "react-dev-utils": "^9.0.1",
     "react-outside-click-handler": "^1.3.0",
     "react-test-renderer": "^16.8.6",
-    "react-text-mask": "^5.4.3",
     "resolve": "1.10.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
