--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.30-beta2",
+  "version": "0.2.31",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -11,9 +11,9 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "^3.18.0",
-    "@blueprintjs/datetime": "^3.12.0",
-    "@blueprintjs/select": "^3.10.0",
+    "@blueprintjs/core": "^3.21.0",
+    "@blueprintjs/datetime": "^3.15.1",
+    "@blueprintjs/select": "^3.11.2",
     "@blueprintjs/table": "^3.7.0",
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-text-mask": "^5.4.6",
