--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.31-beta1",
+  "version": "0.2.32",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -11,6 +11,9 @@
     "lib"
   ],
   "dependencies": {
+    "@ag-grid-community/all-modules": "^22.0.0",
+    "@ag-grid-community/react": "^22.0.0",
+    "@ag-grid-enterprise/all-modules": "^22.0.0",
     "@blueprintjs/core": "^3.21.0",
     "@blueprintjs/datetime": "^3.15.1",
     "@blueprintjs/select": "^3.11.2",
