--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -52,7 +52,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "rm -rf ./lib && tsc",
+    "build": "rm -rf ./lib && tsc && npm run copy-files",
+    "copy-files": "copyfiles -u 2 src/components/**/*.css lib",
     "test": "cross-env CI=true node scripts/test.js --env=jsdom",
     "precommit": "pretty-quick --staged",
     "lint": "tslint './src/**/*.{ts,tsx}'",
@@ -99,6 +100,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "color": "^3.1.2",
+    "copyfiles": "^2.1.1",
     "cross-env": "^5.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
