--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.3.9-beta4",
+  "version": "0.3.10",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -25,7 +25,7 @@
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
-    "mobx": "^5.9.4",
+    "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
