--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.3.11",
+  "version": "0.3.11-beta1",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -22,8 +22,8 @@
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
-    "mobx": "^5.15.1",
-    "mobx-react": "^6.1.4",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
     "orgchart": "^2.1.2",
