--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.3.11-beta1",
+  "version": "0.3.12",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -23,21 +23,21 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
-    "mobx-react": "^5.4.3",
+    "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
     "orgchart": "^2.1.2",
     "rc-pagination": "^1.20.7",
     "rc-select": "^9.x",
-    "react": "^16.10.2",
-    "react-beautiful-dnd": "^10.1.1",
+    "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
-    "react-dnd": "^9.3.4",
-    "react-dnd-html5-backend": "^9.3.4",
-    "react-dom": "^16.10.2",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dom": "^16.12.0",
     "react-outside-click-handler": "^1.3.0",
-    "react-pose": "^4.0.8",
+    "react-pose": "^4.0.10",
     "react-resize-detector": "^4.1.3",
     "react-rnd": "^10.0.0",
     "react-scrollbars-custom": "^4.0.20",
@@ -45,7 +45,7 @@
     "shortid": "^2.2.15",
     "styled-components": "^4.2.0",
     "text-mask-addons": "^3.8.0",
-    "validator": "^10.11.0"
+    "validator": "^12.1.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -64,89 +64,89 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.4.3",
+    "@babel/core": "7.7.7",
     "@types/color": "^3.0.0",
-    "@types/enzyme": "^3.9.1",
+    "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.12",
-    "@types/jquery": "^3.3.29",
-    "@types/lodash": "^4.14.124",
-    "@types/node": "12.0.0",
-    "@types/react": "16.8.17",
-    "@types/react-beautiful-dnd": "^10.1.2",
+    "@types/jest": "^24.0.25",
+    "@types/jquery": "^3.3.31",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "13.1.1",
+    "@types/react": "16.9.17",
+    "@types/react-beautiful-dnd": "^11.0.4",
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
-    "@types/react-datepicker": "^2.8.1",
-    "@types/react-dom": "16.8.4",
-    "@types/react-resize-detector": "^3.1.1",
-    "@types/react-test-renderer": "^16.8.1",
+    "@types/react-datepicker": "^2.10.0",
+    "@types/react-dom": "16.9.4",
+    "@types/react-resize-detector": "^4.2.0",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/shortid": "^0.0.29",
-    "@types/styled-components": "^4.1.14",
-    "@types/validator": "^10.11.0",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@types/styled-components": "^4.4.1",
+    "@types/validator": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.5",
-    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.0.6",
+    "babel-plugin-named-asset-import": "^0.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^9.0.0",
+    "babel-preset-react-app": "^9.1.0",
     "babel-preset-stage-2": "^6.24.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "color": "^3.1.2",
     "copyfiles": "^2.1.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^5.16.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
+    "cross-env": "^6.0.3",
+    "css-loader": "3.4.0",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-flowtype": "4.5.2",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "file-loader": "5.0.2",
+    "fs-extra": "8.1.0",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "husky": "^1.3.1",
+    "husky": "^3.1.0",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
-    "jest": "24.7.1",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-watch-typeahead": "^0.3.1",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.2.1",
+    "is-wsl": "^2.1.1",
+    "jest": "24.9.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-watch-typeahead": "^0.4.2",
+    "mini-css-extract-plugin": "0.9.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.6.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.17.0",
-    "pretty-quick": "^1.10.0",
-    "react-app-polyfill": "^1.0.1",
-    "react-dev-utils": "^9.0.1",
-    "react-test-renderer": "^16.8.6",
-    "resolve": "1.10.0",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.3",
-    "ts-pnp": "1.1.2",
-    "tslint": "^5.16.0",
-    "tslint-config-airbnb": "^5.11.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
+    "react-app-polyfill": "^1.0.5",
+    "react-dev-utils": "^10.0.0",
+    "react-test-renderer": "^16.12.0",
+    "resolve": "1.14.1",
+    "style-loader": "1.1.2",
+    "terser-webpack-plugin": "2.3.1",
+    "ts-pnp": "1.1.5",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.4.5",
-    "url-loader": "1.1.2",
-    "webpack": "4.29.6",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.2.0"
+    "typescript": "3.7.4",
+    "url-loader": "3.0.0",
+    "webpack": "4.41.4",
+    "webpack-dev-server": "3.10.1",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
     "extends": "react-app"
