--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.3.12",
+  "version": "0.3.12-beta1",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -11,8 +11,9 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "^3.21.0",
+    "@blueprintjs/core": "^3.22.3",
     "@blueprintjs/datetime": "^3.15.1",
+    "@blueprintjs/icons": "^3.13.0",
     "@blueprintjs/select": "^3.11.2",
     "@blueprintjs/table": "^3.7.0",
     "@types/react-outside-click-handler": "^1.2.0",
