--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.3.12-beta1",
+  "version": "0.3.12-beta3",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -11,7 +11,7 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "^3.22.3",
+    "@blueprintjs/core": "3.21.0",
     "@blueprintjs/datetime": "^3.15.1",
     "@blueprintjs/icons": "^3.13.0",
     "@blueprintjs/select": "^3.11.2",
