--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-rnd": "^10.0.0",
     "react-scrollbars-custom": "^4.0.20",
     "react-text-mask": "^5.4.3",
+    "react-tiny-virtual-list": "^2.2.0",
     "shortid": "^2.2.15",
     "styled-components": "^4.2.0",
     "text-mask-addons": "^3.8.0",
