--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@blueprintjs/icons": "^3.13.0",
     "@blueprintjs/select": "^3.11.2",
     "@blueprintjs/table": "^3.7.0",
+    "@types/classnames": "^2.2.10",
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-text-mask": "^5.4.6",
     "@typescript-eslint/parser": "^2.3.3",
-    "classnames": "latest",
+    "classnames": "^2.2.6",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
