--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "3.41.0",
-    "@blueprintjs/datetime": "3.21.2",
-    "@blueprintjs/icons": "3.25.1",
-    "@blueprintjs/select": "3.15.8",
+    "@blueprintjs/core": "3.21.0",
+    "@blueprintjs/datetime": "^3.15.1",
+    "@blueprintjs/icons": "^3.13.0",
+    "@blueprintjs/select": "^3.11.2",
     "@blueprintjs/table": "^3.7.0",
     "@types/classnames": "^2.2.10",
     "@types/react-outside-click-handler": "^1.2.0",
