--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "rc-pagination": "^1.20.7",
     "rc-select": "^9.x",
     "react": "^16.12.0",
-    "react-beautiful-dnd": "^12.2.0",
+    "react-beautiful-dnd": "12.2.0",
     "react-color": "^2.17.3",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
@@ -77,7 +77,7 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "13.1.1",
     "@types/react": "16.9.17",
-    "@types/react-beautiful-dnd": "^11.0.4",
+    "@types/react-beautiful-dnd": "11.0.7",
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "16.9.4",
