--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "3.54.0",
+    "@blueprintjs/core": "3.50.2",
     "@blueprintjs/datetime": "3.24.0",
     "@blueprintjs/icons": "3.33.0",
     "@blueprintjs/select": "3.19.1",
-    "@types/react-outside-click-handler": "^1.2.0",
-    "@types/react-text-mask": "^5.4.6",
     "@typescript-eslint/parser": "^2.3.3",
     "classnames": "^2.2.6",
     "formstate": "^1.3.0",
@@ -81,9 +79,11 @@
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "16.9.4",
+    "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@types/styled-components": "^4.4.1",
+    "@types/react-text-mask": "^5.4.6",
+    "@types/styled-components": "^5.1.24",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "babel-cli": "^6.26.0",
@@ -145,7 +145,7 @@
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.7.5",
+    "typescript": "^4.0.3",
     "url-loader": "3.0.0",
     "webpack": "4.46.0",
     "webpack-dev-server": "3.11.2",
