--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@blueprintjs/icons": "3.33.0",
     "@blueprintjs/select": "3.19.1",
     "@typescript-eslint/parser": "^2.3.3",
+    "@types/react-outside-click-handler": "^1.2.0",
+    "@types/react-text-mask": "^5.4.11",
     "classnames": "^2.2.6",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
@@ -79,10 +81,8 @@
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "16.9.4",
-    "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@types/react-text-mask": "5.4.6",
     "@types/styled-components": "^5.1.24",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
