--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.15.1",
+    "color": "^3.1.2",
     "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "np": "^6.0.0",
     "orgchart": "^2.1.2",
     "rc-pagination": "^1.20.7",
     "rc-select": "^9.x",
-    "react": "^16.12.0",
+    "react": "16.12.0",
     "react-beautiful-dnd": "12.2.0",
     "react-color": "^2.17.3",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.12.0",
     "react-outside-click-handler": "^1.3.0",
     "react-pose": "^4.0.10",
     "react-resize-detector": "^4.1.3",
@@ -43,7 +44,7 @@
     "react-text-mask": "^5.4.3",
     "react-tiny-virtual-list": "^2.2.0",
     "react-use": "13.26.4",
-    "styled-components": "^4.2.0",
+    "styled-components": "4.2.0",
     "text-mask-addons": "^3.8.0",
     "validator": "^12.1.0"
   },
@@ -76,14 +77,14 @@
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.149",
     "@types/node": "13.1.1",
-    "@types/react": "16.9.17",
+    "@types/react": "16.9.35",
     "@types/react-beautiful-dnd": "11.0.7",
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
-    "@types/react-dom": "16.9.4",
+    "@types/react-dom": "16.9.8",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@types/styled-components": "^5.1.24",
+    "@types/styled-components": "5.1.12",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "babel-cli": "^6.26.0",
@@ -98,7 +99,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "color": "^3.1.2",
     "copyfiles": "^2.1.1",
     "cross-env": "^6.0.3",
     "css-loader": "3.4.0",
@@ -145,7 +145,7 @@
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.0.3",
+    "typescript": "4.5.3",
     "url-loader": "3.0.0",
     "webpack": "4.46.0",
     "webpack-dev-server": "3.11.2",
