--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "3.50.2",
+    "@blueprintjs/core": "3.53.0",
     "@blueprintjs/datetime": "3.24.0",
     "@blueprintjs/icons": "3.33.0",
     "@blueprintjs/select": "3.19.1",
-    "@typescript-eslint/parser": "^2.3.3",
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-text-mask": "^5.4.11",
+    "@typescript-eslint/parser": "^2.3.3",
     "classnames": "^2.2.6",
+    "color": "^3.1.2",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.15.1",
-    "color": "^3.1.2",
     "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "np": "^6.0.0",
@@ -36,6 +36,7 @@
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "16.12.0",
+    "react-is": "^18.0.0",
     "react-outside-click-handler": "^1.3.0",
     "react-pose": "^4.0.10",
     "react-resize-detector": "^4.1.3",
@@ -44,7 +45,7 @@
     "react-text-mask": "^5.4.3",
     "react-tiny-virtual-list": "^2.2.0",
     "react-use": "13.26.4",
-    "styled-components": "4.2.0",
+    "styled-components": "5.2.3",
     "text-mask-addons": "^3.8.0",
     "validator": "^12.1.0"
   },
@@ -77,14 +78,14 @@
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.149",
     "@types/node": "13.1.1",
-    "@types/react": "16.9.17",
+    "@types/react": "16.9.8",
     "@types/react-beautiful-dnd": "11.0.7",
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "16.9.8",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@types/styled-components": "5.1.12",
+    "@types/styled-components": "5.1.25",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "babel-cli": "^6.26.0",
@@ -145,12 +146,15 @@
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "4.6.3",
+    "typescript": "4.0.3",
     "url-loader": "3.0.0",
     "webpack": "4.46.0",
     "webpack-dev-server": "3.11.2",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
+  },
+  "resolutions": {
+    "@types/react": "16.14.16"
   },
   "config": {
     "commitizen": {
