--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.149",
     "@types/node": "13.1.1",
-    "@types/react": "16.9.8",
+    "@types/react": "^18.0.3",
     "@types/react-beautiful-dnd": "11.0.7",
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
-    "@types/react-dom": "16.9.8",
+    "@types/react-dom": "^18.0.0",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-test-renderer": "^16.9.1",
     "@types/styled-components": "5.1.25",
@@ -152,9 +152,6 @@
     "webpack-dev-server": "3.11.2",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
-  },
-  "resolutions": {
-    "@types/react": "16.14.16"
   },
   "config": {
     "commitizen": {
