--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lib"
   ],
   "dependencies": {
-    "@blueprintjs/core": "3.53.0",
-    "@blueprintjs/datetime": "3.24.0",
-    "@blueprintjs/icons": "3.33.0",
-    "@blueprintjs/select": "3.19.1",
+    "@blueprintjs/core": "4.12.0",
+    "@blueprintjs/datetime": "4.4.7",
+    "@blueprintjs/icons": "4.10.1",
+    "@blueprintjs/popover2": "^1.8.1",
+    "@blueprintjs/select": "4.8.8",
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-text-mask": "^5.4.11",
-    "@typescript-eslint/parser": "^2.3.3",
+    "@typescript-eslint/parser": "5.42.0",
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "formstate": "^1.3.0",
@@ -27,15 +28,15 @@
     "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "np": "^6.0.0",
-    "orgchart": "^2.1.2",
+    "orgchart": "^3.1.1",
     "rc-pagination": "^1.20.7",
     "rc-select": "^9.x",
-    "react": "16.14.0",
+    "react": "18.2.0",
     "react-beautiful-dnd": "12.2.0",
     "react-color": "^2.17.3",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
-    "react-dom": "16.14.0",
+    "react-dom": "18.2.0",
     "react-is": "^18.0.0",
     "react-outside-click-handler": "^1.3.0",
     "react-pose": "^4.0.10",
@@ -44,7 +45,7 @@
     "react-scrollbars-custom": "^4.0.20",
     "react-text-mask": "^5.4.3",
     "react-tiny-virtual-list": "^2.2.0",
-    "react-use": "13.26.4",
+    "react-use": "17.4.0",
     "styled-components": "5.2.3",
     "text-mask-addons": "^3.8.0",
     "validator": "^12.1.0"
@@ -68,65 +69,69 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.7.7",
+    "@babel/core": "7.20.2",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.20.1",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@types/color": "^3.0.0",
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.25",
+    "@types/jest": "^29.2.1",
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.149",
     "@types/node": "13.1.1",
-    "@types/react": "^18.0.3",
+    "@types/react": "18.0.25",
     "@types/react-beautiful-dnd": "11.0.7",
     "@types/react-color": "^3.0.1",
     "@types/react-custom-scrollbars": "^4.0.6",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "18.0.9",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-test-renderer": "^16.9.1",
     "@types/styled-components": "5.1.25",
     "@types/validator": "^12.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "5.42.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
+    "babel-jest": "^29.2.2",
+    "babel-loader": "9.1.0",
     "babel-plugin-named-asset-import": "^0.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.1.0",
     "babel-preset-stage-2": "^6.24.1",
     "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.4.0",
     "copyfiles": "^2.1.1",
     "cross-env": "^6.0.3",
     "css-loader": "3.4.0",
     "cz-conventional-changelog": "3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.1.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-flowtype": "4.5.2",
+    "eslint": "8.26.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "file-loader": "5.0.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "fs-extra": "8.1.0",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-webpack-plugin": "5.5.0",
     "husky": "^3.1.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^2.1.1",
-    "jest": "24.9.0",
+    "jest": "29.2.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
-    "jest-watch-typeahead": "^0.4.2",
+    "jest-watch-typeahead": "^2.2.0",
     "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -136,22 +141,21 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react-app-polyfill": "^1.0.5",
-    "react-dev-utils": "^10.0.0",
-    "react-test-renderer": "^16.12.0",
+    "react-dev-utils": "12.0.1",
     "resolve": "1.14.1",
     "semantic-release": "^17.0.8",
     "style-loader": "1.1.2",
-    "terser-webpack-plugin": "2.3.1",
+    "terser-webpack-plugin": "5.3.6",
     "ts-pnp": "1.1.5",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "4.0.3",
+    "typescript": "4.8.4",
     "url-loader": "3.0.0",
-    "webpack": "4.46.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "webpack": "5.74.0",
+    "webpack-dev-server": "4.11.1",
+    "webpack-manifest-plugin": "5.0.0",
+    "workbox-webpack-plugin": "6.5.4"
   },
   "config": {
     "commitizen": {
@@ -216,11 +220,6 @@
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   }
 }
